メニュー切替ボタンのテキストを「MENU」に変更し、スタイルを調整しました

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <button id="menu-toggle" class="menu-toggle" aria-label="メニューを開く" aria-expanded="true" aria-controls="side-menu">
-    &#9776;
+    MENU
   </button>
   <div id="menu-backdrop" class="menu-backdrop" aria-hidden="true"></div>
   <aside id="side-menu" class="side-menu open" aria-hidden="false">
