--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
       </div>
     </div>
     <div class="menu-footer">
-      
+      <div class="menu-license">
+        <div>Leaflet (MIT) | &copy; OpenStreetMap contributors (ODbL)</div>
+        <div>データ(CC BY): 認定こども園 / 私立認可保育園 / 市立認可保育園 / 小規模保育事業 / 事業所内保育事業 / 企業主導型保育事業 / 認可外保育施設 / 認可外（顧客児童限定）</div>
+        <div>提供: <a href="https://opendata.pref.shizuoka.jp/" target="_blank" rel="noopener">静岡県オープンデータポータル</a> / <a href="https://www.city.hamamatsu.shizuoka.jp/opendata/index.html" target="_blank" rel="noopener">浜松市オープンデータ</a></div>
+      </div>
       <div class="menu-actions">
         <button id="about-button" class="menu-button" type="button">このアプリについて</button>
       </div>
