--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button id="menu-close" class="menu-close" type="button" aria-label="メニューを閉じる">×</button>
     </div>
     <div class="menu-catch">
-      <div><strong>○</strong> 募集人数と申込人数を地図で確認できます。</div>
+      <div><strong>○</strong> 浜松市 こども園/保育園 の募集人数と申込人数を地図で確認できます。</div>
       <div><strong>○</strong> マップ上の施設をクリックすると詳細が表示されます。</div>
       <div><strong>○</strong> 年齢・施設種別で絞り込むと空き状況が色分けされます。</div>
     </div>
