--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <div><strong>○</strong> 浜松市 こども園/保育園 の募集人数と申込人数を地図で確認できます。</div>
       <div><strong>○</strong> マップ上の施設をクリックすると詳細が表示されます。</div>
       <div><strong>○</strong> 年齢・施設種別で絞り込むと空き状況が色分けされます。</div>
+      <div><strong>○</strong> 詳細は下記公式サイトをご確認ください。</div>
+      <div>https://www.hamamatsu-pippi.net/shiritai/yoho/</div>
     </div>
     <label class="menu-label" for="age-select">年齢を選択</label>
     <select id="age-select" class="menu-input"></select>
