公式サイトへのリンクをクリック可能にし、ユーザーインターフェースを改善しました

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div><strong>○</strong> マップ上の施設をクリックすると詳細が表示されます。</div>
       <div><strong>○</strong> 年齢・施設種別で絞り込むと空き状況が色分けされます。</div>
       <div><strong>○</strong> 詳細は下記公式サイトをご確認ください。</div>
-      <div>https://www.hamamatsu-pippi.net/shiritai/yoho/</div>
+      <div><a href="https://www.hamamatsu-pippi.net/shiritai/yoho/" target="_blank" rel="noopener">https://www.hamamatsu-pippi.net/shiritai/yoho/</a></div>
     </div>
     <label class="menu-label" for="age-select">年齢を選択</label>
     <select id="age-select" class="menu-input"></select>
